syntax = "proto3";
package stegos.sync;

import "crypto.proto";
import "blockchain.proto";

message Subscribe {
    uint64 epoch = 1;
    uint32 offset = 2;
}

message SyncRequest {
    oneof request {
        Subscribe subscribe_full = 1;
        Subscribe subscribe_light = 2;
        RequestOutputs request_outputs = 3;
    }
}

message Subscribed {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
}

message Block {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
    stegos.blockchain.Block block = 10;
}

message LightBlock {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
    stegos.blockchain.LightBlock block = 10;
}

message RequestOutputs {
    // block info
    uint64 block_epoch = 1;
    uint32 block_offset = 2;
    // Utxo info
    repeated uint32 outputs_ids = 3;
}

message OutputsInfo {
    // block info
    uint64 block_epoch = 1;
    uint32 block_offset = 2;
    // Utxo info
    repeated stegos.blockchain.Output found_outputs = 3; 
}

message SyncReply {
    oneof response {
        Subscribed subscribed = 1;
        Block block = 2;
        LightBlock light_block = 3;
        OutputsInfo outputs_info = 4;
    }
}